Fix scrollbar design

--- a/src/index.sass
+++ b/src/index.sass
@@ -6,3 +6,16 @@ body
     background-color: $color-primary-background
     font-family: "JetBrains Mono", sans-serif
     font-size: 14px
+
+::-webkit-scrollbar
+    width: 12px
+    height: 12px
+
+::-webkit-scrollbar-track
+    background-color: $color-secondary-background
+
+::-webkit-scrollbar-thumb
+    background-color: $color-third-background
+
+::-webkit-scrollbar-corner
+    background-color: $color-secondary-background
